--- a/src/demo/styles/site.scss
+++ b/src/demo/styles/site.scss
@@ -1,4 +1,4 @@
-﻿@import '../../node_modules/bootstrap/scss/bootstrap';
+﻿@import '../../../node_modules/bootstrap/scss/bootstrap';
 
 body, html {
   height:100%;
