--- a/src/demo/app/components/site-about.component.html
+++ b/src/demo/app/components/site-about.component.html
@@ -7,8 +7,17 @@
     <li>A validation solution to automate form creation, based on decorators and editors</li>
     <li>A widget library for components that use Bootstrap 4 as layout foundation</li>
     <li>A widgert library based on SVG with some very special components</li>
-    <li>A HUD widget library for buildung sci-fi designs, mostly SVG based</li>
 </ol> 
-<p>So, stay tuned!</p>
+<h3>What's up in the future?</h3>
+<p>
+    I'm going to treat this project as a starter for learning and experimenting. It's production ready anyway. A new project is udner way, that has few improvements:
+    <ul>
+        <li>Validation, Form Widgets, and Components are going to be split</li>
+        <li>A base path called @svogv is being created</li>
+        <li>All design goes to Angular Material 2 and there is no Bootstrap anymore</li>
+        <li>Additional quirks such as HUD and MAPS coming later but independently</li>
+    </ul>
+</p>
 <h3>Licensing</h3>
+<p>MIT</p>
 <p>Everything is Open Sourced. For enterprises we sell additional licenses that help convincing your boss.</p>
