--- a/src/demo/app/components/app-dashboard.component.html
+++ b/src/demo/app/components/app-dashboard.component.html
@@ -1,16 +1,9 @@
 ﻿<div class="row">
-	<div class="col-lg-6 col-md-6">
+	<div class="col-lg-3 col-md-3">
 		<ac-infobox icon="fa-user" text="Widgets" number="3" footerText="Show widgets" [footerLink]="['/widgets/list']" color="Warning"></ac-infobox>
 	</div>
-	<div class="col-lg-6 col-md-6">
-		<ac-infobox icon="fa-list" text="Users" [number]="users.length" footerText="Show some demo data" [footerLink]="['/editor/list']"
-			color="Info"></ac-infobox>
-	</div>
-</div>
-<div class="row">
-	<div class="col-lg-6 col-md-6">
-		<ac-infobox icon="fa-space-shuttle" text="HUD" number="1" footerText="HUD Dashboard" [footerLink]="['/huddashboard']" color="Success"></ac-infobox>
-	</div>
-	<div class="col-lg-6 col-md-6">
+	<div class="col-lg-3 col-md-3">
+		<ac-infobox icon="fa-list" text="Forms" [number]="users.length" footerText="Show some demo data" [footerLink]="['/editor/list']"
+		 color="Info"></ac-infobox>
 	</div>
 </div>
