--- a/src/demo/app/components/site-about.component.html
+++ b/src/demo/app/components/site-about.component.html
@@ -1,23 +1,24 @@
 ﻿<div class="alert alert-info">
-    SVOGV is a ongoing project that helps Angular2 developers to create awsome apps quite fast.
+    SVOGV is an ongoing project that helps Angular developers to create awesome apps quite fast.
 </div>
 <h3>Objections</h3>
 <p>This project consists of several parts that can be used independently:</p>
 <ol>
     <li>A validation solution to automate form creation, based on decorators and editors</li>
-    <li>A widget library for components that use Bootstrap 4 as layout foundation</li>
-    <li>A widgert library based on SVG with some very special components</li>
-</ol> 
+    <li>A widget library for form components that use Bootstrap 4 as layout foundation</li>
+    <li>A widget library based on SVG with some very special components</li>
+</ol>
 <h3>What's up in the future?</h3>
 <p>
-    I'm going to treat this project as a starter for learning and experimenting. It's production ready anyway. A new project is udner way, that has few improvements:
-    <ul>
-        <li>Validation, Form Widgets, and Components are going to be split</li>
-        <li>A base path called @svogv is being created</li>
-        <li>All design goes to Angular Material 2 and there is no Bootstrap anymore</li>
-        <li>Additional quirks such as HUD and MAPS coming later but independently</li>
-    </ul>
+    I'm going to treat this project as a starter for learning and experimenting. It's production ready anyway. A new project
+    is under way, that has few improvements:
 </p>
+<ul>
+    <li>Validation, Form Widgets, and Components are going to be split</li>
+    <li>A base path called @svogv is being created</li>
+    <li>All design goes to Angular Material 2 and there is no Bootstrap anymore</li>
+    <li>Additional quirks such as HUD and MAPS coming later but independently</li>
+</ul>
 <h3>Licensing</h3>
 <p>MIT</p>
 <p>Everything is Open Sourced. For enterprises we sell additional licenses that help convincing your boss.</p>
