--- a/projects/svogv/src/lib/widgets/treeview/treeview.component.html
+++ b/projects/svogv/src/lib/widgets/treeview/treeview.component.html
@@ -1,8 +1,9 @@
 ﻿<ul class="treeview">
-    <ac-treenode [node]="nodes" 
-                  (nodeClick)="onNodeClick($event)" 
-                  (checkChanged)="onCheckChanged($event)"
-                  (selectedChanged)="onSelectedChanged($event)"
-                  (collapseChanged)="onCollapseChanged($event)"
-     ></ac-treenode>
-  </ul>
+  <ac-treenode
+    [node]="nodes"
+    (nodeClick)="onNodeClick($event)"
+    (checkChanged)="onCheckChanged($event)"
+    (selectedChanged)="onSelectedChanged($event)"
+    (collapseChanged)="onCollapseChanged($event)"
+  ></ac-treenode>
+</ul>
