--- a/src/app/components/dashboard/app-dashboard.component.html
+++ b/src/app/components/dashboard/app-dashboard.component.html
@@ -1,9 +1,9 @@
 ﻿<div class="row">
 	<div class="col-lg-3 col-md-3">
-		<ac-infobox icon="fa-user" text="Widgets" number="3" footerText="Show widgets" [footerLink]="['/widgets/list']" color="Warning"></ac-infobox>
+		<app-infobox icon="fa-user" text="Widgets" number="3" footerText="Show widgets" [footerLink]="['/widgets/list']" color="Warning"></app-infobox>
 	</div>
 	<div class="col-lg-3 col-md-3">
-		<ac-infobox icon="fa-list" text="Forms" [number]="users.length" footerText="Show some demo data" [footerLink]="['/editor/list']"
-		 color="Info"></ac-infobox>
+		<app-infobox icon="fa-list" text="Forms" [number]="users.length" footerText="Show some demo data" [footerLink]="['/editor/list']"
+		 color="Info"></app-infobox>
 	</div>
 </div>
