--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,24 +1,23 @@
 ﻿<div class="alert alert-info">
     SVOGV is an ongoing project that helps Angular developers to create awesome apps quite fast.
 </div>
-<h3>Objections</h3>
-<p>This project consists of several parts that can be used independently:</p>
-<ol>
-    <li>A validation solution to automate form creation, based on decorators and editors</li>
-    <li>A widget library for form components that use Bootstrap 4 as layout foundation</li>
-    <li>A widget library based on SVG with some very special components</li>
-</ol>
-<h3>What's up in the future?</h3>
+<h3>Purpose</h3>
 <p>
-    I'm going to treat this project as a starter for learning and experimenting. It's production ready anyway. A new project
-    is under way, that has few improvements:
+  This is a project that helps creating sophisticated Angular components. It's not really just for adding to packages and using,
+  but more for learning. The will be a book available that explains the making of completely.
+</p>
+<p>
+  The major part is what most projects really need: a grid component. This grid can:
 </p>
 <ul>
-    <li>Validation, Form Widgets, and Components are going to be split</li>
-    <li>A base path called @svogv is being created</li>
-    <li>All design goes to Angular Material 2 and there is no Bootstrap anymore</li>
-    <li>Additional quirks such as HUD and MAPS coming later but independently</li>
-</ul>
-<h3>Licensing</h3>
-<p>MIT</p>
-<p>Everything is Open Sourced. For enterprises we sell additional licenses that help convincing your boss.</p>
+    <li>Show any data, creating headers and rows dynamically</li>
+    <li>Format all kind of data flexibly</li>
+    <li>Can add and remove columns flexibly</li>
+    <li>Has paging</li>
+    <li>Has sorting</li>
+    <li>Has filtering on the client side</li>
+    <li>Can edit data inline</li>
+  </ul>
+<p>
+  Just check all the features out in the <b>Features</b> section at the left.
+</p>
