--- a/src/app/components/editordemo/editordemo.component.html
+++ b/src/app/components/editordemo/editordemo.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
-  <form (ngSubmit)="saveUser()" [formGroup]="userForm" role="form" class="row">
+  <form (ngSubmit)="saveUser()" role="form" class="row" #userForm="ngForm">
     <fieldset style="width: 100%">
       <legend>Edit current user</legend>
-      <ac-editor [userForm]="userForm" name="userName"></ac-editor>
-      <ac-editor [userForm]="userForm" name="email"></ac-editor>
-      <ac-editor [userForm]="userForm" name="phoneNumber"></ac-editor>
-      <ac-editor [userForm]="userForm" name="age"></ac-editor>
-      <ac-editor [userForm]="userForm" name="birthday"></ac-editor>
-      <ac-editor [userForm]="userForm" name="isAdmin"></ac-editor>
-      <ac-editor [userForm]="userForm" name="passWord"></ac-editor>
-      <ac-editor [userForm]="userForm" name="passWordTwo"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="userName"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="email"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="phoneNumber"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="age"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="birthday"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="isAdmin"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="passWord"></ac-editor>
+      <ac-editor [userForm]="userFormGroup" name="passWordTwo"></ac-editor>
       <div class="row">
         <button class="btn btn-sm btn-success" type="submit" [disabled]="!userForm.valid">
           <i class="fa fa-save"></i> Save
