Fix circular deps

--- a/projects/svogv/src/lib/widgets/editors/editor.component.html
+++ b/projects/svogv/src/lib/widgets/editors/editor.component.html
@@ -1,4 +1,5 @@
 <div class="form-group row"
+    [formGroup]="userForm"
      *ngIf="type != 'hidden' && userForm"
      [ngClass]="{ 'has-danger': !userForm.controls[name].valid && userForm.controls[name].touched }">
   <label class="col-form-label col-md-3 col-sm-10"
