--- a/projects/svogv/src/lib/widgets/datagrid/datagrid.component.css
+++ b/projects/svogv/src/lib/widgets/datagrid/datagrid.component.css
@@ -9,5 +9,5 @@ th { background: none; }
   padding: 1px;
   border: 0px;
   background-color: transparent !important;
-  cursor: hand;
+  cursor: pointer;
 }
