--- a/src/app/components/editordemo/list/list.component.html
+++ b/src/app/components/editordemo/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row col-12">
   <div class="alert alert-info">
     The Grid implementation is just a base class that handles the working stuff of the grid within a single class. The demo contains one possible UI,
     actually just a table. You can use any UI you like, based on &lt;table&gt;, &lt;div&gt;, or even &lt;ul&gt;. The basic features currently
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-12">
     <form role="search" class="form-inline col-md-6">
       <div class="input-group" *ngIf="model">
         <label for="searchUsers">Search </label>
@@ -31,8 +31,8 @@
   [filter]="searchItem && searchItem.value"
   [showEditButton]="true"
   [showDeleteButton]="true"
-  [textEditButton]="Edit"
-  [textDeleteButton]="Delete"
+  textEditButton="Edit"
+  textDeleteButton="Delete"
   (onEdit)="editUser($event)"
   (onDelete)="deleteUser($event)"
 ></ac-datagrid>
