--- a/src/assets/styles/site.scss
+++ b/src/assets/styles/site.scss
@@ -1,4 +1,5 @@
-﻿@import '../../../node_modules/bootstrap/scss/bootstrap';
+﻿@import '~bootstrap/scss/bootstrap';
+@import '~font-awesome/scss/font-awesome';
 
 body, html {
   height:100%;
@@ -56,7 +57,7 @@ body.modal-open {
   .row-offcanvas-left.active {
     left: 45%;
   }
-  
+
   .sidebar-offcanvas {
     width: 45%;
   }
