--- a/src/assets/styles/site.scss
+++ b/src/assets/styles/site.scss
@@ -1,4 +1,5 @@
 ﻿@import '~bootstrap/scss/bootstrap';
+$fa-font-path: "../../../node_modules/font-awesome/fonts";
 @import '~font-awesome/scss/font-awesome';
 
 body, html {
