Fix events in grid

--- a/src/app/components/editordemo/list/list.component.html
+++ b/src/app/components/editordemo/list/list.component.html
@@ -33,6 +33,7 @@
   [showDeleteButton]="true"
   textEditButton="Edit"
   textDeleteButton="Delete"
+  textButtonsHeader="Actions"
   (onEdit)="editUser($event)"
   (onDelete)="deleteUser($event)"
 ></ac-datagrid>
