--- a/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
+++ b/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
@@ -34,6 +34,9 @@
               <i class="fa fa-remove"></i>
             </button>
           </th>
+          <th>
+            {{ textButtonsHeader }}
+          </th>
         </tr>
       </thead>
       <tbody>
