change partially from css to scss

--- a/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
+++ b/projects/svogv/src/lib/widgets/datagrid/datagrid.component.html
@@ -36,7 +36,7 @@
               <span #warningNoItems>
                 <ng-content select="[data-warning-noitems]"></ng-content>
               </span>
-              <ng-container *ngIf="!warningNoItems.innerHTML.trim()">There are no items to show</ng-container>
+              <ng-container *ngIf="!warningNoItems.innerHTML.trim()">{{  textNoItems }}</ng-container>
             </div>
           </td>
         </tr>
