--- a/projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.scss
+++ b/projects/svogv/src/lib/widgets/datagrid/pagination/datagridpagination.component.scss
@@ -1,16 +1,18 @@
+$radius: 4px;
+
 .pagination {
   display: inline-block;
   padding-left: 0;
   margin: 20px 0;
-  border-radius: 4px;
+  border-radius: $radius;
 }
 .pagination > li {
   display: inline;
 }
 .pagination > li:first-child > span {
   margin-left: 0;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
+  border-bottom-left-radius: $radius;
+  border-top-left-radius: $radius;
 }
 .pagination > .disabled > a,
 .pagination > .disabled > a:focus,
